# KEY-SHIELD

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  keyshield_run.py  kshield  pyproject.toml  setup.py
keyshield/: __init__.py
keyshield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
keyshield/cli/: main.py
keyshield/core/: __init__.py  config.py  engine.py  threat_db.py
keyshield/detectors/: __init__.py  base_detector.py  clipboard_monitor.py  dll_injection_detector.py  hook_detector.py  kernel_module_detector.py  keylogger_detector.py  memory_scanner.py  network_exfil_detector.py  persistence_detector.py  process_detector.py  scheduled_task_detector.py  screen_capture_detector.py  usb_detector.py
keyshield/utils/: __init__.py  helpers.py  logger.py  reporter.py  system_info.py
keyshield/web/: app.py
keyshield/web/static/css/: style.css
keyshield/web/static/js/: app.js
keyshield/web/templates/: base.html  history.html  index.html  report.html  scan.html  settings.html
tests/: test_config.py  test_detectors.py  test_engine.py  test_web.py
